--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="uma coletânia de máximas estóicas de vários autores.">
     <meta property="og:url" content="maximasestoicas.vercel.app">
     <meta name="google-adsense-account" content="ca-pub-8836368214689056">
-    <title>Máximas Estoicas</title>
+    <title>Stoic Maxims</title>
   </head>
   <body class="bg-gray-200 dark:bg-gray-800">
     <div id="root"></div>
