--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/concise.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <meta name="description" content="uma coletânia de máximas estóicas de vários autores.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/brunofranciscu/maximasestoicas/main/mE.jpg">
-    <meta property="og:description" content="uma coletânia de máximas estóicas de vários autores.">
-    <meta property="og:url" content="maximasestoicas.vercel.app">
+    <meta name="description" content="A myriad of stupenduos quotes from various authors.">
+    <meta property="og:description" content="A myriad of stupenduos quotes from various authors.">
+    <meta property="og:url" content="stoicmaxims.vercel.app">
     <meta name="google-adsense-account" content="ca-pub-8836368214689056">
     <meta name="google-site-verification" content="cu4zW65MNUcMrhgj2Mp_9PVnwzHNjnmPt_aHraaLNZQ" />
     <title>Stoic Maxims</title>
