--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="description" content="A myriad of stupenduos quotes from various authors.">
     <meta property="og:description" content="A myriad of stupenduos quotes from various authors.">
-    <meta property="og:url" content="stoicmaxims.vercel.app">
+    <meta property="og:url" content="https://stoicmaxims.vercel.app">
     <meta name="google-adsense-account" content="ca-pub-8836368214689056">
     <meta name="google-site-verification" content="cu4zW65MNUcMrhgj2Mp_9PVnwzHNjnmPt_aHraaLNZQ" />
+    <meta property="og:title" content="Stoic Maxims" />
+    <meta property="og:image" content="https://stoicmaxims.vercel.app/og.jpg" />
     <title>Stoic Maxims</title>
   </head>
   <body class="bg-gray-200 dark:bg-gray-800">
